--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#000000</color>
+    <!--通知栏颜色-->
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="bg">#f4f4f4</color>
     <color name="yupColor">#fcb942</color>
@@ -23,8 +24,6 @@
 
     <!-- 浅灰 -->
     <color name="lightGray">#CCCCCC</color>
-    <!-- 白色 -->
-    <color name="white">#FFFFFF</color>
 
     <color name="black">#000000</color>
     <!-- 黑色 -->
@@ -52,5 +51,13 @@
     <color name="lightgreen">#00EE00</color>
 
     <color name="itemback">#FFFFFF</color>
+
+    <!--bottnavi-->
+    <color name="white">#FFFFFF</color>
+    <color name="teal">#00796B</color>
+    <color name="brown">#8D6E63</color>
+    <color name="blue">#2196F3</color>
+    <color name="grey">#607D8B</color>
+    <color name="orange">#F57C00</color>
 
 </resources>
