--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,6 +52,8 @@
 
     <color name="itemback">#FFFFFF</color>
 
+    <color name="light_red">#ff3300</color>
+
     <!--bottnavi-->
     <color name="white">#FFFFFF</color>
     <color name="teal">#00796B</color>
