--- a/app/src/main/res/layout/add_layout.xml
+++ b/app/src/main/res/layout/add_layout.xml
@@ -9,6 +9,7 @@
 
     <EditText
         android:id="@+id/editText_name"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -124,4 +125,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include_grid_view" />
+
 </android.support.constraint.ConstraintLayout>
