--- a/app/src/main/res/layout/select_time_activity.xml
+++ b/app/src/main/res/layout/select_time_activity.xml
@@ -88,33 +88,33 @@
 
     <ImageButton
         android:id="@+id/have_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="22dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toTopOf="@+id/confirm"
         app:layout_constraintEnd_toStartOf="@+id/confirm"
-        app:srcCompat="@drawable/ic_book_white_24dp" />
+        android:background="@drawable/btn_big_deepgreen" />
 
     <ImageButton
         android:id="@+id/no_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="22dp"
         android:layout_marginStart="20dp"
         app:layout_constraintBottom_toTopOf="@+id/confirm"
         app:layout_constraintStart_toStartOf="@+id/confirm"
-        app:srcCompat="@drawable/ic_book_white_24dp" />
+        android:background="@drawable/btn_big_red" />
 
     <ImageButton
         android:id="@+id/no_select"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="22dp"
         android:layout_marginStart="26dp"
         app:layout_constraintBottom_toTopOf="@+id/confirm"
         app:layout_constraintStart_toEndOf="@+id/confirm"
-        app:srcCompat="@drawable/ic_book_white_24dp" />
+        android:background="@drawable/btn_big_gay" />
 
     <Button
         android:id="@+id/confirm"
