--- a/app/src/main/res/layout/fragmant_all_action.xml
+++ b/app/src/main/res/layout/fragmant_all_action.xml
@@ -6,6 +6,7 @@
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"/>
 
 </android.support.constraint.ConstraintLayout>
