--- a/app/src/main/res/layout/take_member_item_layout.xml
+++ b/app/src/main/res/layout/take_member_item_layout.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView2"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="16dp"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        android:layout_centerVertical="true"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="20dp"
+        android:src="@mipmap/ic_launcher"
+        app:civ_border_width="1dp"
+        app:civ_border_color="@color/orange"/>
 
     <TextView
         android:id="@+id/textView5"
