--- a/app/src/main/res/layout/add_activity_gridview_layout.xml
+++ b/app/src/main/res/layout/add_activity_gridview_layout.xml
@@ -2,17 +2,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/gray">
+    android:orientation="vertical">
 
     <GridView
         android:id="@+id/gridView2"
+        android:background="@color/lightGray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:horizontalSpacing="1dp"
         android:numColumns="4"
-        android:padding="2dp"
+        android:padding="1dp"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="true"
         android:verticalSpacing="1dp" />
 
 </LinearLayout>
