--- a/app/src/main/res/layout/flash_activity_layout.xml
+++ b/app/src/main/res/layout/flash_activity_layout.xml
@@ -2,6 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/flash_bg">
+    android:background="@drawable/flash_bg"
+    android:fitsSystemWindows="true"
+    android:clipToPadding="true">
 
 </RelativeLayout>
