--- a/app/src/main/res/layout/gridview_item_layout.xml
+++ b/app/src/main/res/layout/gridview_item_layout.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:orientation="vertical"
-    android:background="@color/itemback">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="35dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/grid_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:textColor="@color/black"/>
+        android:gravity="center"
+        android:textSize="14sp"
+        android:textColor="@color/lightGray"
+        android:text="15:00"/>
 
-</LinearLayout>
+</FrameLayout>
