--- a/app/src/main/res/layout/reg_layout.xml
+++ b/app/src/main/res/layout/reg_layout.xml
@@ -41,6 +41,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
+            android:id="@+id/editV_frag_register_usermail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:background="@drawable/bg_searchview"
+            android:drawableLeft="@drawable/phone"
+            android:hint=" 请输入邮箱"
+            android:drawablePadding="6dp"
+            android:inputType="text"
+            android:textColorHint="@color/lightGray"
+            android:paddingBottom="8dp"
+            android:paddingLeft="14dp"
+            android:textSize="14sp"
+            android:paddingTop="8dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/editV_frag_register_username"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:background="@drawable/bg_searchview"
+            android:drawableLeft="@drawable/phone"
+            android:hint=" 请输入用户名"
+            android:drawablePadding="6dp"
+            android:inputType="text"
+            android:maxLength="11"
+            android:textColorHint="@color/lightGray"
+            android:paddingBottom="8dp"
+            android:paddingLeft="14dp"
+            android:textSize="14sp"
+            android:paddingTop="8dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
             android:id="@+id/editV_frag_register_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
