--- a/app/src/main/res/layout/select_time_activity.xml
+++ b/app/src/main/res/layout/select_time_activity.xml
@@ -36,18 +36,67 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
         android:text="持续时间"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_time"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="9dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_num"
+        app:layout_constraintTop_toBottomOf="@+id/tv_num" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="活动介绍"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_introduce"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_introduce"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:lines="1"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="true"
+        app:layout_constraintStart_toStartOf="@+id/tv_place"
+        app:layout_constraintTop_toBottomOf="@+id/tv_place" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="9dp"
+        android:text="活动类型"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/tv_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -55,75 +104,165 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="9dp"
-        android:text="活动介绍"
-        android:textColor="@color/black"
+        android:text="活动规模"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:textColor="@color/black"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_introduce"
+        android:id="@+id/tv_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:text="TextView"
-        android:textColor="@color/black"
         android:textSize="18sp"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/tv_type"
+        app:layout_constraintTop_toBottomOf="@+id/tv_type" />
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="活动地点"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_place"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_place"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:lines="1"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:text="TextView"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/tv_time"
         app:layout_constraintTop_toBottomOf="@+id/tv_time" />
 
     <include
         android:id="@+id/select_grid_view"
         layout="@layout/add_activity_gridview_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="225dp"
-        android:layout_marginTop="150dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="0dp"
+        android:layout_height="230dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_introduce" />
 
-    <ImageButton
-        android:id="@+id/have_time"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/confirm"
-        app:layout_constraintEnd_toStartOf="@+id/confirm"
-        android:background="@drawable/btn_big_deepgreen" />
 
-    <ImageButton
-        android:id="@+id/no_time"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/confirm"
-        app:layout_constraintStart_toStartOf="@+id/confirm"
-        android:background="@drawable/btn_big_red" />
+    <LinearLayout
+        android:id="@+id/btn_liner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/select_grid_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <ImageButton
-        android:id="@+id/no_select"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginStart="26dp"
-        app:layout_constraintBottom_toTopOf="@+id/confirm"
-        app:layout_constraintStart_toEndOf="@+id/confirm"
-        android:background="@drawable/btn_big_gay" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/select_can"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/btn_select_green" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="有时间" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/select_2can"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/btn_ligthgreen" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="可以有" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/select_1can"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/btn_orange" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="不太有" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/select_nocan"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/btn_red" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="没有" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:text="确定"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="15dp"
+        android:text="确 定"
+        android:background="@drawable/bg_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_liner" />
+
 
 </android.support.constraint.ConstraintLayout>
