对加入和详情页时间展示修改

--- a/app/src/main/res/layout/detail_action_layout.xml
+++ b/app/src/main/res/layout/detail_action_layout.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="9dp"
-        android:text="持续时间"
+        android:text="活动时间"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
