--- a/app/src/main/res/layout/select_time_activity.xml
+++ b/app/src/main/res/layout/select_time_activity.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="持续时间"
+        android:text="活动时间"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_time"
